<?xml version="1.0"?>
<package format="2">
  <name>explain_bt</name>
  <version>0.0.0</version>
  <description>Explainable BT package</description>

  <maintainer email="thbarkouki@ucdavis.edu">Tammer Barkouki</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>behaviortree_cpp</depend>
  <depend>std_msgs</depend>
</package>
